# SearchFileContent

./: README.md
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/search_file_content/: about.py  desktop.py  program.py  program_old.py
trash/: program.py  program2.py  program3.py  program4.py  program5.py
