[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search_file_content"
version = "0.1.0"
description = "Search for text inside files across directories, with path filters and live content preview."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["find", "search"]
dependencies = [
    "PyQt5"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx-desktop/SearchFileContent/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx-desktop/SearchFileContent/tree/main/doc"
"Source" = "https://github.com/trucomanx-desktop/SearchFileContent"

[project.scripts]
"search-file-content" = "search_file_content.program:main"

[tool.setuptools]
packages = ["search_file_content", "search_file_content.modules"]

[tool.setuptools.package-data]
"search_file_content" = ["icons/*.png", "icons/*.svg"]
